Fixed wrapping issue with pre tag

--- a/src/components/Editor/Runners/PythonRunner/PythonRunner.css
+++ b/src/components/Editor/Runners/PythonRunner/PythonRunner.css
@@ -22,6 +22,11 @@
 .pythonrunner-console {
   margin-top: 20px;
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
 }
 
 #input {
